ajout d'une image pour l'accueil qu'il faut maintenant redimensionner references #27 references #23

--- a/src/decoration/lg.css
+++ b/src/decoration/lg.css
@@ -6,3 +6,8 @@
     -fx-background-color: linear-gradient(#61a2b1, #2A5058);
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
 }
+
+#imageAccueil {
+	-fx-background-image: url("werewolf.png");
+	-fx-height:50px;
+}
