ajout de l'image et mise en place pour la vue de l'accueil references #27 references #23

--- a/src/decoration/lg.css
+++ b/src/decoration/lg.css
@@ -9,5 +9,7 @@
 
 #imageAccueil {
 	-fx-background-image: url("werewolf.png");
-	-fx-height:50px;
+	-fx-background-repeat: no-repeat;
+	-fx-background-size: 300 300;
+	-fx-background-position:center;
 }
