--- a/src/decoration/lg.css
+++ b/src/decoration/lg.css
@@ -1,6 +1,6 @@
 .button {
 	
-	 -fx-text-fill: white;
+	-fx-text-fill: white;
     -fx-font-family: "Arial Narrow";
     -fx-font-weight: bold;
     -fx-background-color: linear-gradient(#61a2b1, #2A5058);
@@ -12,4 +12,22 @@
 	-fx-background-repeat: no-repeat;
 	-fx-background-size: 300 300;
 	-fx-background-position:center;
+}
+
+#titrePrincipal {
+	-fx-font-family: "Lucida Handwriting";
+	-fx-font-weight:BOLD;
+	-fx-font-size:80;
+	
+}
+
+#pseudo {
+	-fx-font-family: "Lucida Handwriting";
+	-fx-font-weight:NORMAL;
+	-fx-font-size:40;
+}
+
+#cadreAccueil {
+	-fx-border-color: black;
+	-fx-border-width: 2px 2px 2px 2px
 }
