--- a/src/decoration/lg.css
+++ b/src/decoration/lg.css
@@ -14,6 +14,14 @@
 	-fx-background-position:center;
 }
 
+#imageCarteLoupGaroup{
+	-fx-background-image: url("/illustration/carteLoupGarou.png");
+	-fx-background-repeat: no-repeat;
+	-fx-background-size: 300 300;
+	-fx-background-position:center;
+
+}
+
 #titrePrincipal {
 	-fx-font-family: "Lucida Handwriting";
 	-fx-font-weight:BOLD;
