--- a/src/vue/decoration/lg.css
+++ b/src/vue/decoration/lg.css
@@ -8,7 +8,7 @@
 }
 
 #image-accueil {
-	-fx-background-image: url("/illustration/werewolf.png");
+	-fx-background-image: url("werewolf.png");
 	-fx-background-repeat: no-repeat;
 	-fx-background-size: 300 300;
 	-fx-background-position:center;
