message d'erreur si pas de pseudo references #44

--- a/src/vue/decoration/lg.css
+++ b/src/vue/decoration/lg.css
@@ -32,6 +32,9 @@
 	-fx-font-size:40;
 }
 
+#erreur {
+	-fx-text-fill : red;
+}
 #cadre-accueil {
 	-fx-border-color: black;
 	-fx-border-width: 2px 2px 2px 2px
